<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            style="@style/PrimaryTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/first_name_text" />

        <TextView
            android:id="@+id/first_name_text_view"
            style="@style/SecondaryTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            tool:text="Алексей" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            style="@style/PrimaryTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/last_name_text" />

        <TextView
            android:id="@+id/last_name_text_view"
            style="@style/SecondaryTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            tool:text="Петров" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            style="@style/PrimaryTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/specialties_text" />

        <TextView
            android:id="@+id/specialty_text_view"
            style="@style/SecondaryTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            tool:text="Android developer" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            style="@style/PrimaryTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/birthday_text" />

        <TextView
            android:id="@+id/birthday_text_view"
            style="@style/SecondaryTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            tool:text="12.03.1994" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            style="@style/PrimaryTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/age_text" />

        <TextView
            android:id="@+id/age_text_view"
            style="@style/SecondaryTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            tool:text="25" />
    </LinearLayout>

</LinearLayout>